--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.projectVersion=1.0
 # This property is optional if sonar.modules is set.
 sonar.sources=./
 sonar.ts.tslint.configPath=sonarlint.json
-sonar.exclusions=schema/**,node_modules/**,documentation/**,logs/**,public/**,src/theme/**,build/**
+sonar.exclusions=schema/**,node_modules/**,documentation/**,logs/**,public/**,src/theme/**,build/**, coverage
 sonar.javascript.exclusions=**/schema/**,**/tests/**,**source/main.js
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 # Encoding of the source code. Default is default system encoding
